--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+
+    <div class="header">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="лого Яндекс Практикум">
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a class="header__link" href="#">Узнать →</a>
+      </h2>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="картина Опять двойка">
+      <div class="header__square-pic"></div>
+    </div>
 
   </div>
 </body>
