header: css, correct html

--- a/index.html
+++ b/index.html
@@ -10,15 +10,27 @@
 <body>
   <div class="page">
 
-    <div class="header">
+    <!-- Шапка сайта -->
+
+    <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="лого Яндекс Практикум">
-      <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <h1 class="header__title normalize-margin-padding">Научиться учиться</h1>
+      <h2 class="header__subtitle normalize-margin-padding">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать →</a>
       </h2>
       <img class="header__main-illustration" src="./images/header-image.png" alt="картина Опять двойка">
       <div class="header__square-pic"></div>
-    </div>
+    </header>
+
+    <!-- Секция Описание -->
+
+    <!-- Секция Цифры -->
+
+    <!-- Секция Фейман -->
+
+    <!-- Секция Кауфман -->
+
+    <!-- Подвал сайта -->
 
   </div>
 </body>
