--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="лого Яндекс Практикум">
-      <h1 class="header__title normalize-margin-padding">Научиться учиться</h1>
+      <h1 class="header__title header__title_text_large normalize-margin-padding">Научиться учиться</h1>
       <h2 class="header__subtitle normalize-margin-padding">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать →</a>
       </h2>
@@ -22,15 +22,24 @@
       <div class="header__square-pic"></div>
     </header>
 
-    <!-- Секция Описание -->
+    <main>
 
-    <!-- Секция Цифры -->
+      <!-- Секция Описание -->
 
-    <!-- Секция Фейман -->
+      <!-- Секция Цифры -->
 
-    <!-- Секция Кауфман -->
+      <!-- Секция Фейман -->
+
+      <!-- Секция Кауфман -->
+
+    </main>
+
 
     <!-- Подвал сайта -->
+
+    <footer>
+
+    </footer>
 
   </div>
 </body>
