--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="лого Яндекс Практикум">
-      <h1 class="header__title header__title_text_large normalize-margin-padding">Научиться учиться</h1>
+      <h1 class="header__title normalize-margin-padding">Научиться учиться</h1>
       <h2 class="header__subtitle normalize-margin-padding">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать →</a>
       </h2>
@@ -22,11 +22,38 @@
       <div class="header__square-pic"></div>
     </header>
 
-    <main>
+    <!-- Основное содержимое страницы -->
+
+    <main class="content">
 
       <!-- Секция Описание -->
 
+      <section class="description content__description">
+        <div class="two-columns description__two-columns">
+          <h3 class="two-columns__brief normalize-margin-padding">Главные проблемы в обучении</h3>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph normalize-margin-padding">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph normalize-margin-padding">
+              <span class="two-columns__span-accent">Вывод:</span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph normalize-margin-padding">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+
+      </section>
+
       <!-- Секция Цифры -->
+
+      <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <div class="table">
+          <div class="table__cell">
+            <h3 class="table__heading"></h3>
+            <p class="text"></p>
+          </div>
+        </div>
+      </section>
 
       <!-- Секция Фейман -->
 
