--- a/index.html
+++ b/index.html
@@ -45,12 +45,42 @@
       <!-- Секция Цифры -->
 
       <section class="digits">
-        <h2 class="section-title">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <h2 class="section-title normalize-margin-padding">Цифры и факты</h2>
+        <h3 class="section-subtitle normalize-margin-padding">Про учёбу и мозг</h3>
         <div class="table">
           <div class="table__cell">
-            <h3 class="table__heading"></h3>
-            <p class="text"></p>
+            <h3 class="table__heading normalize-margin-padding">86 миллиардов</h3>
+            <p class="table__text normalize-margin-padding">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading normalize-margin-padding">2.1 миллиарда</h3>
+            <p class="table__text normalize-margin-padding">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading normalize-margin-padding">1000 терабайт</h3>
+            <p class="table__text normalize-margin-padding">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading normalize-margin-padding">500 триллионов</h3>
+            <p class="table__text normalize-margin-padding">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading normalize-margin-padding">420 миллионов</h3>
+            <p class="table__text normalize-margin-padding">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading normalize-margin-padding">17–20 лет</h3>
+            <p class="table__text normalize-margin-padding">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading normalize-margin-padding">1885 год</h3>
+            <p class="table__text normalize-margin-padding">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading normalize-margin-padding">1889 год</h3>
+            <p class="table__text normalize-margin-padding">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
