--- a/index.html
+++ b/index.html
@@ -44,43 +44,43 @@
 
       <!-- Секция Цифры -->
 
-      <section class="digits">
-        <h2 class="section-title normalize-margin-padding">Цифры и факты</h2>
-        <h3 class="section-subtitle normalize-margin-padding">Про учёбу и мозг</h3>
-        <div class="table">
-          <div class="table__cell">
+      <section class="digits content__digits">
+        <h2 class="section-title section-title_locaton_digits normalize-margin-padding">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_locaton_digits normalize-margin-padding">Про учёбу и мозг</h3>
+        <div class="table table_locaton_digits">
+          <div class="table__cell table__cell_locaton_digits">
             <h3 class="table__heading normalize-margin-padding">86 миллиардов</h3>
-            <p class="table__text normalize-margin-padding">Число нейронов в мозге человека</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Число нейронов в мозге человека</p>
           </div>
-          <div class="table__cell">
+          <div class="table__cell table__cell_locaton_digits">
             <h3 class="table__heading normalize-margin-padding">2.1 миллиарда</h3>
-            <p class="table__text normalize-margin-padding">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Число нуждающихся в повышении квалификации</p>
             <p class="table__text table__text_margin normalize-margin-padding">Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell">
+          <div class="table__cell table__cell_locaton_digits">
             <h3 class="table__heading normalize-margin-padding">1000 терабайт</h3>
-            <p class="table__text normalize-margin-padding">Объём памяти человека</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Объём памяти человека</p>
           </div>
-          <div class="table__cell">
+          <div class="table__cell table__cell_locaton_digits">
             <h3 class="table__heading normalize-margin-padding">500 триллионов</h3>
-            <p class="table__text normalize-margin-padding">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
-          <div class="table__cell">
+          <div class="table__cell table__cell_locaton_digits">
             <h3 class="table__heading normalize-margin-padding">420 миллионов</h3>
-            <p class="table__text normalize-margin-padding">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text table__text_margin normalize-margin-padding">Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell">
+          <div class="table__cell table__cell_locaton_digits">
             <h3 class="table__heading normalize-margin-padding">17–20 лет</h3>
-            <p class="table__text normalize-margin-padding">Пик обучаемости</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Пик обучаемости</p>
           </div>
-          <div class="table__cell">
+          <div class="table__cell table__cell_locaton_digits">
             <h3 class="table__heading normalize-margin-padding">1885 год</h3>
-            <p class="table__text normalize-margin-padding">Открытие кривой забывания</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Открытие кривой забывания</p>
           </div>
-          <div class="table__cell">
+          <div class="table__cell table__cell_locaton_digits">
             <h3 class="table__heading normalize-margin-padding">1889 год</h3>
-            <p class="table__text normalize-margin-padding">Открытие условного рефлекса</p>
+            <p class="table__text table__text_margin normalize-margin-padding">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
