--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
       </section>
 
       <!-- Секция Фейман -->
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <div class="feynman__link"><a href="#">Подробнее →</a></div>
+      </section>
 
       <!-- Секция Кауфман -->
 
