--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
       <!-- Секция Фейман -->
       <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <div class="feynman__link"><a href="#">Подробнее →</a></div>
+        <h2 class="feynman__title feynman__title_margin normalize-margin-padding">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle feynman__subtitle_margin normalize-margin-padding">Выучить и не забыть.</h3>
+        <a class="feynman__link" href="#">Подробнее →</a>
       </section>
 
       <!-- Секция Кауфман -->
