--- a/index.html
+++ b/index.html
@@ -94,6 +94,54 @@
 
       <!-- Секция Кауфман -->
 
+      <section class="kaufman content__kaufman">
+        <h2 class="section-title section-title_theme_dark normalize-margin-padding">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark normalize-margin-padding">от Джоша Кауфмана</h3>
+        <div class="table table_theme_dark">
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">1</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">2</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">3</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">4</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">5</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">6</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">7</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">8</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">9</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">10</h3>
+            <p class="table__text table__text_theme_dark normalize-margin-padding">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+      </section>
+
     </main>
 
 
