--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <!-- Секция Кауфман -->
 
-      <section class="kaufman content__kaufman">
+      <section class="kaufman">
         <h2 class="section-title section-title_theme_dark normalize-margin-padding">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark normalize-margin-padding">от Джоша Кауфмана</h3>
         <div class="table table_theme_dark">
