--- a/index.html
+++ b/index.html
@@ -147,8 +147,35 @@
 
     <!-- Подвал сайта -->
 
-    <footer>
-
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <img class="logo logo_place_footer" src="./images/logo_place_header.svg" alt="лого Яндекс Практикум">
+          <p class="footer__author normalize-margin-padding">&copy; Виктор Абанькин</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading normalize-margin-padding">О Практикуме</h2>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading normalize-margin-padding">Соцсети</h2>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube"> YouTube
+            </a>
+            <a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте"> ВКонтакте
+            </a>
+            <a class="footer__column-link" href="#">
+              <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="иконка TikTok"> TikTok
+            </a>
+          </div>
+        </div>
+      </div>
     </footer>
 
   </div>
