--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
       <!-- Секция Описание -->
 
-      <section class="description content__description">
-        <div class="two-columns description__two-columns">
+      <section class="description">
+        <div class="two-columns">
           <h3 class="two-columns__brief normalize-margin-padding">Главные проблемы в обучении</h3>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph normalize-margin-padding">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
@@ -39,12 +39,11 @@
             <p class="two-columns__paragraph normalize-margin-padding">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
-
       </section>
 
       <!-- Секция Цифры -->
 
-      <section class="digits content__digits">
+      <section class="digits">
         <h2 class="section-title section-title_locaton_digits normalize-margin-padding">Цифры и факты</h2>
         <h3 class="section-subtitle section-subtitle_locaton_digits normalize-margin-padding">Про учёбу и мозг</h3>
         <div class="table table_locaton_digits">
@@ -86,9 +85,10 @@
       </section>
 
       <!-- Секция Фейман -->
+      
       <section class="feynman">
-        <h2 class="feynman__title feynman__title_margin normalize-margin-padding">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle feynman__subtitle_margin normalize-margin-padding">Выучить и не забыть.</h3>
+        <h2 class="feynman__title normalize-margin-padding">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle normalize-margin-padding">Выучить и не забыть.</h3>
         <a class="feynman__link" href="#">Подробнее →</a>
       </section>
 
@@ -143,7 +143,6 @@
       </section>
 
     </main>
-
 
     <!-- Подвал сайта -->
 
