footer: add links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </section>
 
       <!-- Секция Фейман -->
-      
+
       <section class="feynman">
         <h2 class="feynman__title normalize-margin-padding">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle normalize-margin-padding">Выучить и не забыть.</h3>
@@ -163,13 +163,13 @@
         <div class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading normalize-margin-padding">Соцсети</h2>
           <div class="footer__column-links">
-            <a class="footer__column-link" href="#">
+            <a class="footer__column-link" href="https://www.youtube.com" target="_blank">
               <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube"> YouTube
             </a>
-            <a class="footer__column-link" href="#">
+            <a class="footer__column-link" href="https://vk.com" target="_blank">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте"> ВКонтакте
             </a>
-            <a class="footer__column-link" href="#">
+            <a class="footer__column-link" href="https://www.tiktok.com" target="_blank">
               <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="иконка TikTok"> TikTok
             </a>
           </div>
