delet normalize-margin-padding

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="лого Яндекс Практикум">
-      <h1 class="header__title normalize-margin-padding">Научиться учиться</h1>
-      <h2 class="header__subtitle normalize-margin-padding">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать →</a>
-      </h2>
+      </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="картина Опять двойка">
       <div class="header__square-pic"></div>
     </header>
@@ -30,13 +30,13 @@
 
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief normalize-margin-padding">Главные проблемы в обучении</h3>
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph normalize-margin-padding">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph normalize-margin-padding">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод:</span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns__paragraph normalize-margin-padding">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
@@ -44,42 +44,42 @@
       <!-- Секция Цифры -->
 
       <section class="digits">
-        <h2 class="section-title section-title_locaton_digits normalize-margin-padding">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_locaton_digits normalize-margin-padding">Про учёбу и мозг</h3>
+        <h2 class="section-title section-title_locaton_digits">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_locaton_digits">Про учёбу и мозг</h3>
         <div class="table table_locaton_digits">
           <div class="table__cell table__cell_locaton_digits">
-            <h3 class="table__heading normalize-margin-padding">86 миллиардов</h3>
-            <p class="table__text table__text_margin normalize-margin-padding">Число нейронов в мозге человека</p>
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text table__text_margin">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell table__cell_locaton_digits">
-            <h3 class="table__heading normalize-margin-padding">2.1 миллиарда</h3>
-            <p class="table__text table__text_margin normalize-margin-padding">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_margin normalize-margin-padding">Всемирный Банк, 2017</p>
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text table__text_margin">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_margin">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell table__cell_locaton_digits">
-            <h3 class="table__heading normalize-margin-padding">1000 терабайт</h3>
-            <p class="table__text table__text_margin normalize-margin-padding">Объём памяти человека</p>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text table__text_margin">Объём памяти человека</p>
           </div>
           <div class="table__cell table__cell_locaton_digits">
-            <h3 class="table__heading normalize-margin-padding">500 триллионов</h3>
-            <p class="table__text table__text_margin normalize-margin-padding">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text table__text_margin">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell table__cell_locaton_digits">
-            <h3 class="table__heading normalize-margin-padding">420 миллионов</h3>
-            <p class="table__text table__text_margin normalize-margin-padding">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_margin normalize-margin-padding">Всемирный Банк, 2017</p>
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text table__text_margin">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_margin">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell table__cell_locaton_digits">
-            <h3 class="table__heading normalize-margin-padding">17–20 лет</h3>
-            <p class="table__text table__text_margin normalize-margin-padding">Пик обучаемости</p>
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text table__text_margin">Пик обучаемости</p>
           </div>
           <div class="table__cell table__cell_locaton_digits">
-            <h3 class="table__heading normalize-margin-padding">1885 год</h3>
-            <p class="table__text table__text_margin normalize-margin-padding">Открытие кривой забывания</p>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text table__text_margin">Открытие кривой забывания</p>
           </div>
           <div class="table__cell table__cell_locaton_digits">
-            <h3 class="table__heading normalize-margin-padding">1889 год</h3>
-            <p class="table__text table__text_margin normalize-margin-padding">Открытие условного рефлекса</p>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text table__text_margin">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
@@ -87,56 +87,56 @@
       <!-- Секция Фейман -->
 
       <section class="feynman">
-        <h2 class="feynman__title normalize-margin-padding">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle normalize-margin-padding">Выучить и не забыть.</h3>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a class="feynman__link" href="#">Подробнее →</a>
       </section>
 
       <!-- Секция Кауфман -->
 
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark normalize-margin-padding">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark normalize-margin-padding">от Джоша Кауфмана</h3>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">1</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Выберите привлекательный проект.</p>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">2</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Сосредоточьтесь на каком-то одном навыке.</p>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">3</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Определите целевой уровень мастерства.</p>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">4</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Разбейте навык на элементы.</p>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">5</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Приготовьте всё необходимое для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">6</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Устраните препятствия для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">7</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Выделите специальное время для занятий.</p>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">8</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Создайте быстрые петли обратной связи.</p>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">9</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark normalize-margin-padding">10</h3>
-            <p class="table__text table__text_theme_dark normalize-margin-padding">Уделяйте внимание количеству и скорости.</p>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
         <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
@@ -150,10 +150,10 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="лого Яндекс Практикум">
-          <p class="footer__author normalize-margin-padding">&copy; Виктор Абанькин</p>
+          <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <h2 class="footer__column-heading normalize-margin-padding">О Практикуме</h2>
+          <h2 class="footer__column-heading">О Практикуме</h2>
           <div class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
             <a class="footer__column-link" href="#">Концепция</a>
@@ -161,7 +161,7 @@
           </div>
         </div>
         <div class="footer__column footer__column_content_info">
-          <h2 class="footer__column-heading normalize-margin-padding">Соцсети</h2>
+          <h2 class="footer__column-heading">Соцсети</h2>
           <div class="footer__column-links">
             <a class="footer__column-link" href="https://www.youtube.com" target="_blank">
               <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube"> YouTube
