--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph">
@@ -44,42 +44,42 @@
       <!-- Секция Цифры -->
 
       <section class="digits">
-        <h2 class="section-title section-title_locaton_digits">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_locaton_digits">Про учёбу и мозг</h3>
-        <div class="table table_locaton_digits">
-          <div class="table__cell table__cell_locaton_digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <div class="table">
+          <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text table__text_margin">Число нейронов в мозге человека</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
-          <div class="table__cell table__cell_locaton_digits">
+          <div class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
-            <p class="table__text table__text_margin">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_margin">Всемирный Банк, 2017</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell table__cell_locaton_digits">
+          <div class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text table__text_margin">Объём памяти человека</p>
+            <p class="table__text">Объём памяти человека</p>
           </div>
-          <div class="table__cell table__cell_locaton_digits">
+          <div class="table__cell">
             <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text table__text_margin">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
-          <div class="table__cell table__cell_locaton_digits">
+          <div class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text table__text_margin">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_margin">Всемирный Банк, 2017</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell table__cell_locaton_digits">
+          <div class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
-            <p class="table__text table__text_margin">Пик обучаемости</p>
+            <p class="table__text">Пик обучаемости</p>
           </div>
-          <div class="table__cell table__cell_locaton_digits">
+          <div class="table__cell">
             <h3 class="table__heading">1885 год</h3>
-            <p class="table__text table__text_margin">Открытие кривой забывания</p>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
-          <div class="table__cell table__cell_locaton_digits">
+          <div class="table__cell">
             <h3 class="table__heading">1889 год</h3>
-            <p class="table__text table__text_margin">Открытие условного рефлекса</p>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
@@ -98,48 +98,51 @@
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+        <div class="kaufman__triangle"></div>
+<!--
+        <img class="kaufman__triangle2" src="./images/kaufman-triangle.svg" alt="Треугольник">
+-->
       </section>
 
     </main>
