--- a/index.html
+++ b/index.html
@@ -140,9 +140,6 @@
           </div>
         </div>
         <div class="kaufman__triangle"></div>
-<!--
-        <img class="kaufman__triangle2" src="./images/kaufman-triangle.svg" alt="Треугольник">
--->
       </section>
 
     </main>
@@ -157,15 +154,15 @@
         </div>
         <div class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <div class="footer__column-links">
+          <nav class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
             <a class="footer__column-link" href="#">Концепция</a>
             <a class="footer__column-link" href="#">Наставники</a>
-          </div>
+          </nav>
         </div>
         <div class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">Соцсети</h2>
-          <div class="footer__column-links">
+          <nav class="footer__column-links">
             <a class="footer__column-link" href="https://www.youtube.com" target="_blank">
               <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube"> YouTube
             </a>
@@ -175,7 +172,7 @@
             <a class="footer__column-link" href="https://www.tiktok.com" target="_blank">
               <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="иконка TikTok"> TikTok
             </a>
-          </div>
+          </nav>
         </div>
       </div>
     </footer>
