--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -19,7 +18,7 @@
         <a class="header__link" href="#">Узнать →</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="картина Опять двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <!-- Основное содержимое страницы -->
