--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
         </ul>
       </section>
 
+      <!-- Секция Видео -->
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=arj7oStGLkU" frameborder="0"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/watch?v=5MgBikgcWnY" frameborder="0"></iframe>
+        </div>
+      </section>
+
       <!-- Секция Цифры -->
 
       <section class="digits">
