khan: html, css

--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
         </ul>
       </section>
 
+      <!-- Секция Хан -->
+
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Салман Хан<cite class="khan__title">Весь мир — школа</cite></h2>
+          <quote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</quote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги Салман Хан Весь мир — школа">
+            <a class="khan__buy-link" href="">Купить книгу →</a>
+          </div>
+        </div>
+      </section>
+
       <!-- Секция Кауфман -->
 
       <section class="kaufman">
