--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги Салман Хан Весь мир — школа">
-            <a class="khan__buy-link" href="">Купить книгу →</a>
+            <a class="khan__buy-link" href="#">Купить книгу →</a>
           </div>
         </div>
       </section>
@@ -210,6 +210,27 @@
           </li>
         </ul>
         <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <!-- Секция Ресурсы -->
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <nav class="resources__logo-zone">
+          <a class="resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="лого arzamas">
+          </a>
+          <a class="resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="лого n+1">
+          </a>
+          <a class="resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="лого strelka">
+          </a>
+          <a class="resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="лого polka">
+          </a>
+        </nav>
       </section>
 
     </main>
