fix resources__logo alt

--- a/index.html
+++ b/index.html
@@ -219,16 +219,16 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <nav class="resources__logo-zone">
           <a class="resources__link" href="#">
-            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="лого arzamas">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="лого арзамас">
           </a>
           <a class="resources__link" href="#">
-            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="лого n+1">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="лого эн + 1">
           </a>
           <a class="resources__link" href="#">
-            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="лого strelka">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="лого стрелка">
           </a>
           <a class="resources__link" href="#">
-            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="лого polka">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="лого полка">
           </a>
         </nav>
       </section>
