resources: nav -> ul

--- a/index.html
+++ b/index.html
@@ -217,20 +217,28 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav class="resources__logo-zone">
-          <a class="resources__link" href="#">
-            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="лого арзамас">
-          </a>
-          <a class="resources__link" href="#">
-            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="лого эн + 1">
-          </a>
-          <a class="resources__link" href="#">
-            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="лого стрелка">
-          </a>
-          <a class="resources__link" href="#">
-            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="лого полка">
-          </a>
-        </nav>
+        <ul class="resources__logo-zone">
+          <li>
+            <a class="resources__link" href="#">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="лого арзамас">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link" href="#">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="лого эн + 1">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link" href="#">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="лого стрелка">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link" href="#">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="лого полка">
+            </a>
+          </li>
+        </ul>
       </section>
 
     </main>
